src/cli/generate/snapshots/mise__cli__generate__github_action__tests__github_action_write-2.snap
---
source: src/cli/generate/github_action.rs
expression: contents
snapshot_kind: text
---
name: testing123

on:
  workflow_dispatch:
  pull_request:
  push:
    tags: ["*"]
    branches: ["trunk"]

concurrency:
  group: ${{ github.workflow }}-${{ github.ref }}
  cancel-in-progress: true

env:
  MISE_EXPERIMENTAL: true

jobs:
  testing123:
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - uses: actions/checkout@v4
      - uses: jdx/mise-action@v2
      - run: mise run testing123
