src/cli/generate/snapshots/mise__cli__generate__github_action__tests__github_action_write.snap
---
source: src/cli/generate/github_action.rs
expression: output
snapshot_kind: text
---
Wrote to ~/cwd/.github/workflows/testing123.yml
